--- a/lockswapaquarius/index.html
+++ b/lockswapaquarius/index.html
@@ -225,6 +225,9 @@
 
   <script>window.process = window.process || { env: {} };</script>
 
+  <!-- Soroban Client Fallback (for SorobanRpc if not bundled in Stellar SDK) -->
+<script src="https://unpkg.com/soroban-client@0.8.1/dist/soroban-client.min.js" crossorigin="anonymous"></script>
+
   <script type="module">
     /* ===== ESM imports (no SorobanRpc import here) ===== */
     import SignClient from "https://esm.sh/@walletconnect/sign-client@2.21.8";
@@ -299,15 +302,27 @@
     let quoteMode="send";
     let lastIsSend=true;
 
-    // ---------- Soroban RPC via UMD only ----------
-    let _soro = null;
-    function rpc() {
-      if (_soro) return _soro;
-      const Server = window.StellarSdk?.SorobanRpc?.Server;
-      if (!Server) throw new Error("SorobanRpc unavailable from UMD.");
-      _soro = new Server(sorobanRpcUrl, { allowHttp:false });
-      return _soro;
-    }
+// ---------- Soroban RPC (UMD + fallback to soroban-client) ----------
+let _soro = null;
+function rpc() {
+  if (_soro) return _soro;
+
+  // Try the Stellar SDK UMD first
+  const SdkServer = window.StellarSdk?.SorobanRpc?.Server;
+  if (SdkServer) {
+    _soro = new SdkServer(sorobanRpcUrl, { allowHttp:false });
+    return _soro;
+  }
+
+  // Fallback to legacy soroban-client UMD (0.8.x)
+  const LegacyServer = window.sorobanClient?.Server || window.SorobanClient?.Server;
+  if (LegacyServer) {
+    _soro = new LegacyServer(sorobanRpcUrl, { allowHttp:false });
+    return _soro;
+  }
+
+  throw new Error("SorobanRpc unavailable: neither StellarSdk.SorobanRpc nor soroban-client present.");
+}
 
     // Cache for issuer -> domain
     const DOMAIN_CACHE = new Map();
