--- a/lockswapaquarius/index.html
+++ b/lockswapaquarius/index.html
@@ -8,8 +8,8 @@
   <!-- Freighter API (UMD) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/stellar-freighter-api/5.0.0/index.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-  <!-- Stellar SDK (UMD v14) — gives window.StellarSdk -->
-  <script src="https://cdn.jsdelivr.net/npm/@stellar/stellar-sdk@14/dist/stellar-sdk.min.js" crossorigin="anonymous"></script>
+  <!-- Stellar SDK (UMD v17) — exposes window.StellarSdk + window.StellarSdk.SorobanRpc -->
+  <script src="https://cdn.jsdelivr.net/npm/@stellar/stellar-sdk@17/dist/stellar-sdk.min.js" crossorigin="anonymous"></script>
 
   <style>
     :root { --bg:#0b0f12; --panel:#12181d; --ink:#e8f0f6; --muted:#94a3ad; --accent:#4fd1c5; --err:#ff6b6b; --ok:#57d29a; --border:#1c242c; }
@@ -226,23 +226,9 @@
   <script>window.process = window.process || { env: {} };</script>
 
   <script type="module">
-    /* ===== ESM imports ===== */
+    /* ===== ESM imports (no soroban-client) ===== */
     import SignClient from "https://esm.sh/@walletconnect/sign-client@2.21.8";
     import QRCode     from "https://esm.sh/qrcode@1.5.3";
-
-    // Try jsDelivr +esm first; if it fails, fallback to esm.sh with ?bundle
-    let SorobanMod = null;
-    try {
-      SorobanMod = await import("https://cdn.jsdelivr.net/npm/@stellar/soroban-client@2.6.1/+esm");
-    } catch (e1) {
-      console.warn("soroban-client via jsDelivr failed, trying esm.sh…", e1);
-      try {
-        SorobanMod = await import("https://esm.sh/@stellar/soroban-client@2.6.1?bundle");
-      } catch (e2) {
-        console.warn("soroban-client via esm.sh failed", e2);
-        SorobanMod = null; // we still allow the page to run; rpc() will error only when needed
-      }
-    }
 
     // ---------- Shortcuts ----------
     const SDK = window.StellarSdk;
@@ -271,21 +257,13 @@
     const PROJECT_ID = "f658ce3a7c8a185214974f71539fea39";
     const EXPLORER   = "https://explorer-api.walletconnect.com/v3/wallets";
 
-    // ---------- Soroban RPC (prefer SDK UMD; fallback to ESM soroban-client) ----------
+    // ---------- Soroban RPC (via Stellar SDK UMD v17) ----------
     let _soro = null;
     function rpc() {
       if (_soro) return _soro;
-
       const SdkServer = window.StellarSdk?.SorobanRpc?.Server;
-      if (SdkServer) {
-        _soro = new SdkServer(sorobanRpcUrl, { allowHttp: false });
-        return _soro;
-      }
-      const ServerCtor2 = SorobanMod?.Server || SorobanMod?.default?.Server;
-      if (!ServerCtor2) {
-        throw new Error("Soroban client not available (both StellarSdk.SorobanRpc and @stellar/soroban-client ESM failed to load).");
-      }
-      _soro = new ServerCtor2(sorobanRpcUrl, { allowHttp: false });
+      if (!SdkServer) throw new Error("This stellar-sdk build doesn’t expose SorobanRpc. Hard-refresh and ensure v17 UMD is loaded.");
+      _soro = new SdkServer(sorobanRpcUrl, { allowHttp: false });
       return _soro;
     }
 
@@ -768,7 +746,7 @@ Lock end (UTC):   ${end.toLocaleString(undefined,{timeZone:'UTC'})}`;
           xdrSwap.value = tx.toXDR();
           enableSwapButtons();
         } else {
-          swapQuote.innerHTML += " · <i>Connect to build XDR</i>";
+          swapQuote.innerHTML += " · <i>Connect to build XDR</i>`;
         }
       }catch(e){
         console.error(e);
